--- a/src/main/webapp/app/entities/contacto-proveedor/contacto-proveedor-update.component.html
+++ b/src/main/webapp/app/entities/contacto-proveedor/contacto-proveedor-update.component.html
@@ -42,12 +42,28 @@
                 <div class="form-group">
                     <label class="form-control-label" for="field_producto">Producto</label>
                     <input type="text" class="form-control" name="producto" id="field_producto"
-                        [(ngModel)]="contactoProveedor.producto" />
+                        [(ngModel)]="contactoProveedor.producto" required maxlength="1000"/>
+                    <div [hidden]="!(editForm.controls.producto?.dirty && editForm.controls.producto?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.producto?.errors?.required">
+                        This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.producto?.errors?.maxlength">
+                        This field cannot be longer than 1000 characters.
+                        </small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_telefono">Telefono</label>
-                    <input type="number" class="form-control" name="telefono" id="field_telefono"
-                        [(ngModel)]="contactoProveedor.telefono" />
+                    <input type="text" class="form-control" name="telefono" id="field_telefono"
+                        [(ngModel)]="contactoProveedor.telefono" maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.telefono?.dirty && editForm.controls.telefono?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.telefono?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
                 </div>
 
             </div>
