up buttons (style)

--- a/frontend/src/app/provider/provider-update.component.html
+++ b/frontend/src/app/provider/provider-update.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row wrap">
   <div fxFlex.gt-sm="100" fxFlex="100">
     <div fxLayout="row wrap">
-      <div fxFlex.gt-xs="50" fxFlex="100" class="p-10" (click)="previousState()">
+      <div fxFlex.gt-xs="50" fxFlex="100" class="p-10" (click)="previousState()" style="cursor: pointer">
         <mat-icon>arrow_back</mat-icon> Todos los Proveedores
       </div>
 
